// Autogenerated with StateSmith 0.19.0+78b6a120c485e0db8caa327d0eb3d69c63fe4455.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

// Whatever you put in this `FileTop` section will end up 
// being printed at the top of every generated code file.

// whatever you need to import here


// Generated state machine
class Auth : AuthBase()
{
// Add custom code here to inject into the generated class.
// Inheritance or composition might be a better choice.

    enum class EventId    {
        DIDCONNECTEVENTS, 
        DIDFAIL, 
        LOGIN, 
        LOGINLOADED, 
        LOGOUT, 
        LOGOUTLOADED, 
        NETWORKLOST, 
        NETWORKRESTORED, 
        PROFILELOADED, 
        RETRY, 
        SESSIONLOADED
    }
    
    val EventIdCount : Int = 11
    
    enum class StateId    {
        ROOT, 
        LOADING_LOGOUT, 
        LOADING_SESSION, 
        NO_AUTH, 
        OFFLINE, 
        ONLINE_GROUP, 
        ACTIVE, 
        CONNECTING_EVENTS, 
        LOADING_LOGIN, 
        LOADING_PROFILE, 
        WAITING
    }
    
    val StateIdCount : Int = 11
    
    // Used internally by state machine. Feel free to inspect, but don't modify.
    var stateId: StateId  = StateId.ROOT
    
    // State machine variables. Can be used for inputs, outputs, user variables...
    public class Vars
    {
        var count: Int = 0 // this var can be referenced in diagram
    }
    
    // Variables. Can be used for inputs, outputs, user variables...
    var vars : Vars = Vars()
    
    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    fun start()
    {
        ROOT_enter()
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
            
            // ROOT.<InitialState> behavior
            // uml: TransitionTo(NO_AUTH)
            try {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
                
                // Step 2: Transition action: ``.
                
                // Step 3: Enter/move towards transition target `NO_AUTH`.
                NO_AUTH_enter()
                
                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return
            } finally {} // end of behavior for ROOT.<InitialState>
        } finally {} // end of behavior for ROOT
    }
    
    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    fun dispatchEvent(eventId : EventId )
    {
        when (this.stateId)
        {
            // STATE: Auth
            StateId.ROOT -> 
{ } 
            
            // STATE: LOADING_LOGOUT
            StateId.LOADING_LOGOUT -> 
                when (eventId)
                {
                    EventId.DIDFAIL ->  LOADING_LOGOUT_didfail() 
                    EventId.LOGOUTLOADED ->  LOADING_LOGOUT_logoutloaded() 
                else -> {}
                }

            
            // STATE: LOADING_SESSION
            StateId.LOADING_SESSION -> 
                when (eventId)
                {
                    EventId.DIDFAIL ->  LOADING_SESSION_didfail() 
                    EventId.SESSIONLOADED ->  LOADING_SESSION_sessionloaded() 
                else -> {}
                }

            
            // STATE: NO_AUTH
            StateId.NO_AUTH -> 
                when (eventId)
                {
                    EventId.LOGIN ->  NO_AUTH_login() 
                else -> {}
                }

            
            // STATE: OFFLINE
            StateId.OFFLINE -> 
                when (eventId)
                {
                    EventId.NETWORKRESTORED ->  OFFLINE_networkrestored() 
                    EventId.LOGOUT ->  OFFLINE_logout() 
                else -> {}
                }

            
            // STATE: ONLINE_GROUP
            StateId.ONLINE_GROUP -> 
                when (eventId)
                {
                    EventId.DIDFAIL ->  ONLINE_GROUP_didfail() 
                    EventId.NETWORKLOST ->  ONLINE_GROUP_networklost() 
                    EventId.LOGOUT ->  ONLINE_GROUP_logout() 
                else -> {}
                }

            
            // STATE: ACTIVE
            StateId.ACTIVE -> 
                when (eventId)
                {
                    EventId.DIDFAIL ->  ONLINE_GROUP_didfail()  // First ancestor handler for this event
                    EventId.LOGOUT ->  ONLINE_GROUP_logout()  // First ancestor handler for this event
                    EventId.NETWORKLOST ->  ONLINE_GROUP_networklost()  // First ancestor handler for this event
                else -> {}
                }

            
            // STATE: CONNECTING_EVENTS
            StateId.CONNECTING_EVENTS -> 
                when (eventId)
                {
                    EventId.DIDCONNECTEVENTS ->  CONNECTING_EVENTS_didconnectevents() 
                    EventId.DIDFAIL ->  ONLINE_GROUP_didfail()  // First ancestor handler for this event
                    EventId.LOGOUT ->  ONLINE_GROUP_logout()  // First ancestor handler for this event
                    EventId.NETWORKLOST ->  ONLINE_GROUP_networklost()  // First ancestor handler for this event
                else -> {}
                }

            
            // STATE: LOADING_LOGIN
            StateId.LOADING_LOGIN -> 
                when (eventId)
                {
                    EventId.LOGINLOADED ->  LOADING_LOGIN_loginloaded() 
                    EventId.DIDFAIL ->  ONLINE_GROUP_didfail()  // First ancestor handler for this event
                    EventId.LOGOUT ->  ONLINE_GROUP_logout()  // First ancestor handler for this event
                    EventId.NETWORKLOST ->  ONLINE_GROUP_networklost()  // First ancestor handler for this event
                else -> {}
                }

            
            // STATE: LOADING_PROFILE
            StateId.LOADING_PROFILE -> 
                when (eventId)
                {
                    EventId.PROFILELOADED ->  LOADING_PROFILE_profileloaded() 
                    EventId.DIDFAIL ->  ONLINE_GROUP_didfail()  // First ancestor handler for this event
                    EventId.LOGOUT ->  ONLINE_GROUP_logout()  // First ancestor handler for this event
                    EventId.NETWORKLOST ->  ONLINE_GROUP_networklost()  // First ancestor handler for this event
                else -> {}
                }

            
            // STATE: WAITING
            StateId.WAITING -> 
                when (eventId)
                {
                    EventId.RETRY ->  WAITING_retry() 
                    EventId.NETWORKLOST ->  WAITING_networklost() 
                    EventId.LOGOUT ->  WAITING_logout() 
                else -> {}
                }

        }
    }
    
    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private fun exitUpToStateHandler(desiredState : StateId )
    {
        while (this.stateId != desiredState)
        {
            when (this.stateId)
            {
                StateId.LOADING_LOGOUT ->  LOADING_LOGOUT_exit() 
                
                StateId.LOADING_SESSION ->  LOADING_SESSION_exit() 
                
                StateId.NO_AUTH ->  NO_AUTH_exit() 
                
                StateId.OFFLINE ->  OFFLINE_exit() 
                
                StateId.ONLINE_GROUP ->  ONLINE_GROUP_exit() 
                
                StateId.ACTIVE ->  ACTIVE_exit() 
                
                StateId.CONNECTING_EVENTS ->  CONNECTING_EVENTS_exit() 
                
                StateId.LOADING_LOGIN ->  LOADING_LOGIN_exit() 
                
                StateId.LOADING_PROFILE ->  LOADING_PROFILE_exit() 
                
                StateId.WAITING ->  WAITING_exit() 
                
                else ->  return  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun ROOT_enter()
    {
        this.stateId = StateId.ROOT
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state LOADING_LOGOUT
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun LOADING_LOGOUT_enter()
    {
        this.stateId = StateId.LOADING_LOGOUT
        
        // LOADING_LOGOUT behavior
        // uml: enter / { sendLogoutRequest() }
        try {
            // Step 1: execute action `sendLogoutRequest()`
            sendLogoutRequest()
        } finally {} // end of behavior for LOADING_LOGOUT
    }
    
    private fun LOADING_LOGOUT_exit()
    {
        this.stateId = StateId.ROOT
    }
    
    private fun LOADING_LOGOUT_didfail()
    {
        // LOADING_LOGOUT behavior
        // uml: didFail TransitionTo(NO_AUTH)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            LOADING_LOGOUT_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `NO_AUTH`.
            NO_AUTH_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for LOADING_LOGOUT
    }
    
    private fun LOADING_LOGOUT_logoutloaded()
    {
        // LOADING_LOGOUT behavior
        // uml: logoutLoaded TransitionTo(NO_AUTH)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            LOADING_LOGOUT_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `NO_AUTH`.
            NO_AUTH_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for LOADING_LOGOUT
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state LOADING_SESSION
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun LOADING_SESSION_enter()
    {
        this.stateId = StateId.LOADING_SESSION
        
        // LOADING_SESSION behavior
        // uml: enter / { sendSessionRequest() }
        try {
            // Step 1: execute action `sendSessionRequest()`
            sendSessionRequest()
        } finally {} // end of behavior for LOADING_SESSION
    }
    
    private fun LOADING_SESSION_exit()
    {
        this.stateId = StateId.ROOT
    }
    
    private fun LOADING_SESSION_didfail()
    {
        // LOADING_SESSION behavior
        // uml: didFail TransitionTo(LOADING_LOGIN)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            LOADING_SESSION_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `LOADING_LOGIN`.
            ONLINE_GROUP_enter()
            LOADING_LOGIN_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for LOADING_SESSION
    }
    
    private fun LOADING_SESSION_sessionloaded()
    {
        // LOADING_SESSION behavior
        // uml: sessionLoaded TransitionTo(CONNECTING_EVENTS)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            LOADING_SESSION_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `CONNECTING_EVENTS`.
            ONLINE_GROUP_enter()
            CONNECTING_EVENTS_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for LOADING_SESSION
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state NO_AUTH
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun NO_AUTH_enter()
    {
        this.stateId = StateId.NO_AUTH
    }
    
    private fun NO_AUTH_exit()
    {
        this.stateId = StateId.ROOT
    }
    
    private fun NO_AUTH_login()
    {
        // NO_AUTH behavior
        // uml: login TransitionTo(LOADING_LOGIN)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            NO_AUTH_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `LOADING_LOGIN`.
            ONLINE_GROUP_enter()
            LOADING_LOGIN_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for NO_AUTH
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state OFFLINE
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun OFFLINE_enter()
    {
        this.stateId = StateId.OFFLINE
        
        // OFFLINE behavior
        // uml: enter / { notifyOffline() }
        try {
            // Step 1: execute action `notifyOffline()`
            notifyOffline()
        } finally {} // end of behavior for OFFLINE
    }
    
    private fun OFFLINE_exit()
    {
        this.stateId = StateId.ROOT
    }
    
    private fun OFFLINE_logout()
    {
        // OFFLINE behavior
        // uml: logout TransitionTo(NO_AUTH)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            OFFLINE_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `NO_AUTH`.
            NO_AUTH_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for OFFLINE
    }
    
    private fun OFFLINE_networkrestored()
    {
        // OFFLINE behavior
        // uml: networkRestored TransitionTo(LOADING_SESSION)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            OFFLINE_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `LOADING_SESSION`.
            LOADING_SESSION_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for OFFLINE
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ONLINE_GROUP
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun ONLINE_GROUP_enter()
    {
        this.stateId = StateId.ONLINE_GROUP
    }
    
    private fun ONLINE_GROUP_exit()
    {
        // ONLINE_GROUP behavior
        // uml: exit / { notifyInactive() }
        try {
            // Step 1: execute action `notifyInactive()`
            notifyInactive()
        } finally {} // end of behavior for ONLINE_GROUP
        
        this.stateId = StateId.ROOT
    }
    
    private fun ONLINE_GROUP_didfail()
    {
        // ONLINE_GROUP behavior
        // uml: didFail TransitionTo(WAITING)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            exitUpToStateHandler(StateId.ROOT)
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `WAITING`.
            WAITING_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for ONLINE_GROUP
    }
    
    private fun ONLINE_GROUP_logout()
    {
        // ONLINE_GROUP behavior
        // uml: logout TransitionTo(LOADING_LOGOUT)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            exitUpToStateHandler(StateId.ROOT)
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `LOADING_LOGOUT`.
            LOADING_LOGOUT_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for ONLINE_GROUP
    }
    
    private fun ONLINE_GROUP_networklost()
    {
        // ONLINE_GROUP behavior
        // uml: networkLost TransitionTo(OFFLINE)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            exitUpToStateHandler(StateId.ROOT)
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `OFFLINE`.
            OFFLINE_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for ONLINE_GROUP
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ACTIVE
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun ACTIVE_enter()
    {
        this.stateId = StateId.ACTIVE
        
        // ACTIVE behavior
        // uml: enter / { notifyActive() }
        try {
            // Step 1: execute action `notifyActive()`
            notifyActive()
        } finally {} // end of behavior for ACTIVE
    }
    
    private fun ACTIVE_exit()
    {
        this.stateId = StateId.ONLINE_GROUP
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTING_EVENTS
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun CONNECTING_EVENTS_enter()
    {
        this.stateId = StateId.CONNECTING_EVENTS
        
        // CONNECTING_EVENTS behavior
        // uml: enter / { connectEvents() }
        try {
            // Step 1: execute action `connectEvents()`
            connectEvents()
        } finally {} // end of behavior for CONNECTING_EVENTS
    }
    
    private fun CONNECTING_EVENTS_exit()
    {
        this.stateId = StateId.ONLINE_GROUP
    }
    
    private fun CONNECTING_EVENTS_didconnectevents()
    {
        // CONNECTING_EVENTS behavior
        // uml: didConnectEvents TransitionTo(ACTIVE)
        try {
            // Step 1: Exit states until we reach `ONLINE_GROUP` state (Least Common Ancestor for transition).
            CONNECTING_EVENTS_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ACTIVE`.
            ACTIVE_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for CONNECTING_EVENTS
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state LOADING_LOGIN
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun LOADING_LOGIN_enter()
    {
        this.stateId = StateId.LOADING_LOGIN
        
        // LOADING_LOGIN behavior
        // uml: enter / { sendLoginRequest() }
        try {
            // Step 1: execute action `sendLoginRequest()`
            sendLoginRequest()
        } finally {} // end of behavior for LOADING_LOGIN
    }
    
    private fun LOADING_LOGIN_exit()
    {
        this.stateId = StateId.ONLINE_GROUP
    }
    
    private fun LOADING_LOGIN_loginloaded()
    {
        // LOADING_LOGIN behavior
        // uml: loginLoaded TransitionTo(LOADING_PROFILE)
        try {
            // Step 1: Exit states until we reach `ONLINE_GROUP` state (Least Common Ancestor for transition).
            LOADING_LOGIN_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `LOADING_PROFILE`.
            LOADING_PROFILE_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for LOADING_LOGIN
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state LOADING_PROFILE
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun LOADING_PROFILE_enter()
    {
        this.stateId = StateId.LOADING_PROFILE
        
        // LOADING_PROFILE behavior
        // uml: enter / { sendProfileRequest() }
        try {
            // Step 1: execute action `sendProfileRequest()`
            sendProfileRequest()
        } finally {} // end of behavior for LOADING_PROFILE
    }
    
    private fun LOADING_PROFILE_exit()
    {
        this.stateId = StateId.ONLINE_GROUP
    }
    
    private fun LOADING_PROFILE_profileloaded()
    {
        // LOADING_PROFILE behavior
        // uml: profileLoaded TransitionTo(CONNECTING_EVENTS)
        try {
            // Step 1: Exit states until we reach `ONLINE_GROUP` state (Least Common Ancestor for transition).
            LOADING_PROFILE_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `CONNECTING_EVENTS`.
            CONNECTING_EVENTS_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for LOADING_PROFILE
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state WAITING
    ////////////////////////////////////////////////////////////////////////////////
    
    private fun WAITING_enter()
    {
        this.stateId = StateId.WAITING
        
        // WAITING behavior
        // uml: enter / { waitForRetry() }
        try {
            // Step 1: execute action `waitForRetry()`
            waitForRetry()
        } finally {} // end of behavior for WAITING
    }
    
    private fun WAITING_exit()
    {
        this.stateId = StateId.ROOT
    }
    
    private fun WAITING_logout()
    {
        // WAITING behavior
        // uml: logout TransitionTo(NO_AUTH)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            WAITING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `NO_AUTH`.
            NO_AUTH_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for WAITING
    }
    
    private fun WAITING_networklost()
    {
        // WAITING behavior
        // uml: networkLost TransitionTo(OFFLINE)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            WAITING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `OFFLINE`.
            OFFLINE_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for WAITING
    }
    
    private fun WAITING_retry()
    {
        // WAITING behavior
        // uml: retry TransitionTo(LOADING_SESSION)
        try {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            WAITING_exit()
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `LOADING_SESSION`.
            LOADING_SESSION_enter()
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return
        } finally {} // end of behavior for WAITING
    }
companion object {
    
    // Thread safe.
    fun stateIdToString(id : StateId )
     : String     {
        when (id)
        {
            StateId.ROOT ->  return "ROOT"
            StateId.LOADING_LOGOUT ->  return "LOADING_LOGOUT"
            StateId.LOADING_SESSION ->  return "LOADING_SESSION"
            StateId.NO_AUTH ->  return "NO_AUTH"
            StateId.OFFLINE ->  return "OFFLINE"
            StateId.ONLINE_GROUP ->  return "ONLINE_GROUP"
            StateId.ACTIVE ->  return "ACTIVE"
            StateId.CONNECTING_EVENTS ->  return "CONNECTING_EVENTS"
            StateId.LOADING_LOGIN ->  return "LOADING_LOGIN"
            StateId.LOADING_PROFILE ->  return "LOADING_PROFILE"
            StateId.WAITING ->  return "WAITING"
        }
     }
    
    // Thread safe.
    fun eventIdToString(id : EventId )
     : String     {
        when (id)
        {
            EventId.DIDCONNECTEVENTS ->  return "DIDCONNECTEVENTS"
            EventId.DIDFAIL ->  return "DIDFAIL"
            EventId.LOGIN ->  return "LOGIN"
            EventId.LOGINLOADED ->  return "LOGINLOADED"
            EventId.LOGOUT ->  return "LOGOUT"
            EventId.LOGOUTLOADED ->  return "LOGOUTLOADED"
            EventId.NETWORKLOST ->  return "NETWORKLOST"
            EventId.NETWORKRESTORED ->  return "NETWORKRESTORED"
            EventId.PROFILELOADED ->  return "PROFILELOADED"
            EventId.RETRY ->  return "RETRY"
            EventId.SESSIONLOADED ->  return "SESSIONLOADED"
        }
     }
}
}
